@@ -166,15 +166,16 @@ Lars Duening thanks:
      Karl N. Matthias (karmat@matthias.org)
      Kathrin Paschen (paschen@ira.uka.de)
      Kees Leune (c.j.leune@kub.nl)
-     Mark Daniel Reidel (Karm@Nightfall,
-       reidelm@rbg.informatik.tu-darmstadt.de)
-     Markus Peter <warp@spin.de>
+     Kirnan@Avalon
+     Krystal-Anne Rubenstein (punkette@hotmail.com)
      Kirnan@Avalon
      Largo@Wunderland (emeusel@csmd.cs.uni-magdeburg.de)
      Logic (logic@logic.net)
      "Mammi" (mammi@unitopia.uni-stuttgart.de)
      Manu Mäki (mtmaki@pultti.turkuai.fi, Cendor@Winterkill)
-     Markus Peter (warp@hip.spin.de)
+     Mark Daniel Reidel (Karm@Nightfall,
+       reidelm@rbg.informatik.tu-darmstadt.de)
+     Markus Peter (warp@spin.de, warp@hip.spin.de)
      Mat@Maethos
      Matthew Julius (julius.2@wright.edu)
      Andreas Klauer (Andreas.Klauer@epost.de, Menaures@UNItopia)
