@@ -2,3 +2,5 @@ Miscellaneous files for the driver:
 
   icon-32x32.xpm : The 'official' icon for the driver.
   icon-16x16.xpm
+
+  startmud.pl : A simple start/keep-alive script
