@@ -22,12 +22,13 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 62)
-(Parent-Version lpmud 3-3 61)
-(Version-Log "Removed a crasher related to the closure dereferencing on object destruction.")
+(Project-Version lpmud 3-3 63)
+(Parent-Version lpmud 3-3 62)
+(Version-Log "Global variables can no longer redefined in global scope.
+Normal runtime errors are no longer reported on the console.")
 (New-Version-Log
 "")
-(Checkin-Time "Mon, 11 Jun 2001 21:23:22 -0600")
+(Checkin-Time "Wed, 13 Jun 2001 23:04:55 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -59,9 +60,9 @@
   ;; Information about the driver and the distribution in general
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.3 644))
-  (CREDITS (lpmud/d/22_CREDITS 1.70.1.16 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.125 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.180 644))
+  (CREDITS (lpmud/d/22_CREDITS 1.70.1.17 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.126 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.181 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.10 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -140,7 +141,7 @@
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.6 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.17 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.66 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.67 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.8 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.44 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.5 644))
@@ -171,7 +172,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.7 644))
   (src/port.c (lpmud/39_port.c 1.17.1.5 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.12 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.58 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.59 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -184,7 +185,7 @@
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.4 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.7 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.17 644))
-  (src/simulate.c (lpmud/31_simulate.c 1.88.1.36 644))
+  (src/simulate.c (lpmud/31_simulate.c 1.88.1.37 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.7 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.28 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.2 644))
@@ -193,7 +194,7 @@
   (src/strfuns.c (lpmud/C/0_strfuns.c 1.9.1.10 644))
   (src/svalue.h (lpmud/f/39_datatypes. 1.34.1.12 644))
   (src/swap.h (lpmud/f/14_swap.h 1.7.1.1 644))
-  (src/swap.c (lpmud/25_swap.c 1.36.1.13 644))
+  (src/swap.c (lpmud/25_swap.c 1.36.1.14 644))
   (src/switch.h (lpmud/24_switch.h 1.9 644))
   (src/sysmalloc.c (lpmud/23_sysmalloc. 1.1 644))
   (src/telnet.h (lpmud/22_telnet.h 1.5.1.1 644))
@@ -204,7 +205,7 @@
   (src/xalloc.c (lpmud/H/0_xalloc.c 1.2.1.1 644))
 
   ;; Build files
-  (src/func_spec (lpmud/c/31_func_spec 1.53.1.30 644))
+  (src/func_spec (lpmud/c/31_func_spec 1.53.1.31 644))
   (src/string_spec (lpmud/F/6_string_spe 1.13 644))
   (src/mkfunc.c (lpmud/L/14_mkfunc.c 1.1 644))
   (src/make_func.y (lpmud/b/7_make_func. 1.25.1.13 644))
@@ -319,9 +320,10 @@
   (src/util/xerq/DONE (lpmud/k/49_DONE 1.1 644))
 
   ;; Additional files (Icons, etc)
-  (etc/README (lpmud/s/41_README 1.1 644))
+  (etc/README (lpmud/s/41_README 1.2 644))
   (etc/icon-32x32.xpm (lpmud/s/42_icon-32x32 1.1 644) :no-keywords)
   (etc/icon-16x16.xpm (lpmud/s/43_icon-16x16 1.1 644) :no-keywords)
+  (etc/startmud.pl (lpmud/M/27_startmud.p 1.1 744) :no-keywords)
 
   ;; Driver-related include files for the mudlib
   (mudlib/sys/commands.h (lpmud/D/15_commands.h 1.3 644))
@@ -706,7 +708,7 @@
   (doc/efun/[] (lpmud/n/49_[] 1.3.1.1 644))
   (doc/efun/abs (lpmud/l/25_abs 1.2.1.2 644))
   (doc/efun/acos (lpmud/n/50_acos 1.1.1.2 644))
-  (doc/efun/add_action (lpmud/n/51_add_action 1.6 644))
+  (doc/efun/add_action (lpmud/n/51_add_action 1.7 644))
   (doc/efun/all_environment (lpmud/l/26_all_enviro 1.5 644))
   (doc/efun/all_inventory (lpmud/l/27_all_invent 1.2 644))
   (doc/efun/allocate (lpmud/o/3_allocate 1.1.1.2 644))
@@ -991,7 +993,7 @@
   (doc/LPC/lpc (lpmud/r/32_lpc 1.2 644))
   (doc/LPC/mappings (lpmud/l/42_mappings 1.4 644))
   (doc/LPC/modifiers (lpmud/s/48_modifiers 1.6 644))
-  (doc/LPC/operators (lpmud/m/0_operators 1.9.1.2 644))
+  (doc/LPC/operators (lpmud/m/0_operators 1.9.1.3 644))
   (doc/LPC/pragma (lpmud/r/33_pragma 1.8 644))
   (doc/LPC/preprocessor (lpmud/r/34_preprocess 1.3 644))
   (doc/LPC/references (lpmud/c/48_references 1.3 644))
